add: websocket 1-to-1 chat

--- a/readme
+++ b/readme
@@ -1,50 +1,1 @@
-# Golang Mini Projects Collection
-
-> A collection of small and diverse projects built with Golang to learn and practice different concepts.
-
----
-
-## Table of Contents
-- [About](#about)
-- [Projects](#projects)
-- [Installation](#installation)
-- [Usage](#usage)
-- [Technologies](#technologies)
-- [Contributing](#contributing)
-- [License](#license)
-
----
-
-## About
-This repository contains multiple mini-projects implemented in Golang. Each project is designed to teach different aspects of Go programming, such as CLI apps, web APIs, concurrency, WebSockets, and database interactions.
-
----
-
-## Projects
-1. **CLI Task Manager**
-   - Terminal-based task manager with add, update, delete, and list functionality.
-   - Learn file I/O and struct management.
-
-2. **REST API for Notes**
-   - CRUD API endpoints to manage notes.
-   - Learn HTTP handling and JSON serialization.
-
-3. **URL Shortener**
-   - Convert long URLs into short ones and redirect users.
-   - Learn maps, UUIDs, and HTTP redirection.
-
-4. **Concurrent Web Scraper**
-   - Fetch and parse multiple websites concurrently.
-   - Learn goroutines, channels, and HTTP requests.
-
-5. **Chat Application with WebSockets**
-   - Real-time chat app using WebSocket connections.
-   - Learn real-time communication and server-client interactions.
-
-6. **Blog Application**
-   - create and post blog
-   - gin + react full stack project
-   
-
-*(More projects can be added here in the future.)*
-
+#implemetations
